--- a/questions/triangle/question2.tex
+++ b/questions/triangle/question2.tex
@@ -32,5 +32,6 @@ Here $\theta$ = 30 $\degree$ and r = 14cm\\
 \begin{align*}
 	\text{Area of sector} = \frac{\theta}{360} \times \pi r^2
 	=51.31cm^2.
-\end{align*}               
+\end{align*}   
+\url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}            
 \end{frame}
