--- a/PRESENTATION.tex
+++ b/PRESENTATION.tex
@@ -47,6 +47,8 @@
   \titlepage
 \end{frame}
 \input{./questions/triangle/question2}
+\input{./questions/quad/question3}
 \input{./questions/circle/QUESTION4}
+\input{./questions/triangle/QUESTION5}
 
 \end{document}
