--- a/questions/circle/QUESTION4.tex
+++ b/questions/circle/QUESTION4.tex
@@ -15,5 +15,8 @@ from a point on the concentric circle of radius
 \begin{figure}
 \includegraphics[scale=.4]{./CODES/circle/circon.png}
 \end{figure}
-\url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}  
+\begin{itemize}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}  \\
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/TRICON.tex}
+\end{itemize}
 \end{frame}
