--- a/questions/quad/question3.tex
+++ b/questions/quad/question3.tex
@@ -7,35 +7,38 @@ RS and joined it to points P and Q. In how
 many parts the fields is divided? What are the
 shapes of these parts? The farmer wants to sow
 wheat and pulses in equal portions of the field
-separately. How should she do it?\\
+separately. How should she do it?
+\seti
 \end{enumerate}
 \begin{itemize}
 \item \textbf{Solution} :
+\end{itemize}
 \begin{center}
 \input{./figs/FARM.tex}
 \end{center}
-
-\end{itemize}
 \end{frame}
 \begin{frame}
 \begin{itemize}
 \item  After joining the point A to p and Q, the feild is divided into 3 parts.\\
 \item All the three parts are in triangle shape.\\
 As PQRS is a parallelogram so\\
-\begin{align*}
-\textit{Area of PQRS} = \textit{Area of} \triangleAPS + \triangleARQ + \trianglePAQ --(1)\\
-\textit{Area of triangle is half of parallelogram if they have same base and lie between same parallel lines}. \\
-\textit{Area of} \trianglePAQ = \frac{1}{2} Area of PQRS\\
-\trianglePAQ = \frac{1}{2} area(\triangleAPS + \triangleARQ + \triangle APQ\\
-2\trianglePAQ - \trianglePAQ = area(\triangleAPS + \triangleARQ)\\
-\trianglePAQ = \triangleAPS + \triangleARQ\\
-\textit{Hence the farmer can sow wheat in} \trianglePAQ \textit{and pulses in} \triangleAPS and \triangle ARQ\\
-\seti
 \end{itemize}
+\begin{align*}
+\textit{Area of PQRS} = \textit{Area of} \triangle{APS} + \triangle{ARQ} + \triangle{PAQ} --(1)\\
+\textit{Area of triangle is half of parallelogram}\\\textit{if they have same base and lie between same parallel lines}. \\
+\textit{Area of} \triangle{PAQ} = \frac{1}{2} \textit{Area of PQRS}\\
+\triangle{PAQ} = \frac{1}{2}\textit{area}(\triangle{APS} + \triangle{ARQ} + \triangle{APQ}\\
+2\triangle{PAQ} - \triangle{PAQ} = \textit{area(}\triangle{APS} + \triangle{ARQ}\textit{)}\\
+\triangle{PAQ} = \triangle{APS} + \triangle{ARQ}\\
+\textit{Hence the farmer can sow wheat in} \triangle{PAQ} \textit{and pulses in} \triangle{APS} and \triangle{ARQ}\\
 \end{align*}
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.6]{./CODES/quad/QUADCON.png}
+\includegraphics[scale=.5]{./CODES/quad/QUADCON.png}\\
+\begin{itemize}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/FARM.tex}\\
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/quad/QUAD_EXCERCISE.py}
+\end{itemize}
 \end{figure}
 \end{frame}
