--- a/questions/triangle/question2.tex
+++ b/questions/triangle/question2.tex
@@ -13,6 +13,7 @@ swept by the minute hand in 5 minutes.\\
 {
 \input{./figs/clock.tex}
 }
+\url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/clock.tex}
 \end{figure}
 
 
@@ -33,5 +34,5 @@ Here $\theta$ = 30 $\degree$ and r = 14cm\\
 	\text{Area of sector} = \frac{\theta}{360} \times \pi r^2
 	=51.31cm^2.
 \end{align*}   
-\url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}            
+\url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/MISC.py}            
 \end{frame}
