--- a/questions/triangle/question2.tex
+++ b/questions/triangle/question2.tex
@@ -34,5 +34,7 @@ Here $\theta$ = 30 $\degree$ and r = 14cm\\
 	\text{Area of sector} = \frac{\theta}{360} \times \pi r^2
 	=51.31cm^2.
 \end{align*}   
-\url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/MISC.py}            
+\begin{itemize}
+\item \url {https://github.com/pratibha444/GEOMETRY/blob/master/CODES/MISC.py} 
+\end{itemize}             
 \end{frame}
