--- a/questions/triangle/QUESTION5.tex
+++ b/questions/triangle/QUESTION5.tex
@@ -10,7 +10,12 @@
 \item BC = 6.5\\
 \item AB = 6.5\\
 \item $\angle B$ = 110\\ 
-\item\textbf{code}:\url{https://github.com/pratibha444/newcodes/blob/master/codes/ISO.py}
-\item\textbf{Image}:\url{https://github.com/pratibha444/newcodes/blob/master/figs/tricon.png}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\begin{itemize}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/tri_iso.tex}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/triangle/TRI_CON.py}
 \end{itemize}
 \end{frame}
