--- a/figs/tri_iso.tex
+++ b/figs/tri_iso.tex
@@ -5,14 +5,16 @@
 \usetkzobj{all}
 \begin{document}
 \begin{tikzpicture}
-[scale =0.7,>=stealth,point/.style = {draw, circle, fill = black, inner sep = 1pt},]
-\node (B) at (0,0)[point,label=above :$B$] {};
-\node (A) at (5.324,3.728)[point,label=below :$A$] {};
-\node (C) at (10.64,0)[point,label=below :$C$] {};
+[scale =0.6,>=stealth,point/.style = {draw, circle, fill = black, inner sep = 1pt},]
+\node (B) at (0,0)[point,label=below :$B$] {};
+\node (A) at (-2.223,6.108)[point,label=above :$A$] {};
+\node (C) at (6.5,0)[point,label=below :$C$] {};
 
 \draw (A)--(B);
 \draw (B)--(C);
 \draw (C)--(A);
+\tkzMarkAngle[fill=green!40,size=0.5cm,mark=](C,B,A)
+\tkzLabelAngle[pos=1](C,B,A){\rotatebox{-360}{$110$}}
 
 \end{tikzpicture}
 \end{document}
