--- a/questions/quad/question3.tex
+++ b/questions/quad/question3.tex
@@ -12,10 +12,19 @@ separately. How should she do it?
 \end{enumerate}
 \begin{itemize}
 \item \textbf{Solution} :
-\end{itemize}
 \begin{center}
 \input{./figs/FARM.tex}
 \end{center}
+\end{itemize}
+\end{frame}
+\begin{frame}
+\begin{itemize}
+\item PQ = 5\\
+\item SP = 6\\
+\item AG = 6\\
+\item Area of $\triangle$PAQ = $15cm^2$\\
+\item Area of $\triangle$APS and $\triangle$ARQ = 7.5$cm^2$ and 7.5$cm^2$ respectively. 
+\end{itemize}
 \end{frame}
 \begin{frame}
 \begin{itemize}
@@ -35,10 +44,11 @@ As PQRS is a parallelogram so\\
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.5]{./CODES/quad/QUADCON.png}\\
+\includegraphics[scale=.5]{./CODES/quad/QUAD_EX.png}\\
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/FARM.tex}\\
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/quad/QUAD_EXCERCISE.py}
 \end{itemize}
+\seti
 \end{figure}
 \end{frame}
