--- a/questions/triangle/QUESTION5.tex
+++ b/questions/triangle/QUESTION5.tex
@@ -7,13 +7,16 @@
 \begin{itemize}
 \item\textbf{Solution}\\
 \input{./figs/tri_iso.tex}
-\item BC = 6.5\\
+\item BC = 6.5 \item AC = 10.64
 \item AB = 6.5\\
 \item $\angle B$ = 110\\ 
 \end{itemize}
 \end{frame}
 
 \begin{frame}
+\begin{figure}
+\includegraphics[scale=.4]{./CODES/triangle/TRI_CON.png}
+\end{figure}
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/tri_iso.tex}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/triangle/TRI_CON.py}
