--- a/questions/triangle/question2.tex
+++ b/questions/triangle/question2.tex
@@ -8,12 +8,13 @@ swept by the minute hand in 5 minutes.\\
 \end{enumerate}
 \begin{itemize}
 \item \textbf{Solution} :
+\item Given r = 14 
 \begin{figure}[!ht]
-\resizebox{0.2\linewidth}{!}
+\resizebox{0.5\linewidth}{!}
 {
 \input{./figs/clock.tex}
 }
-\url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/clock.tex}
+
 \end{figure}
 
 
@@ -21,7 +22,7 @@ swept by the minute hand in 5 minutes.\\
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.6]{./CODES/misc.png}
+\includegraphics[scale=.6]{./CODES/MISC.png}
 \end{figure}
 \end{frame}
 \begin{frame}
