--- a/figs/clock.tex
+++ b/figs/clock.tex
@@ -5,14 +5,16 @@
 \usetkzobj{all}
 \begin{document}
 \begin{tikzpicture}
-[scale =0.7,>=stealth,point/.style = {draw, circle, fill = black, inner sep = 1pt},]
+[scale =0.9,>=stealth,point/.style = {draw, circle, fill = black, inner sep = 1pt},]
 \node (B) at (0,0)[point,label=below :$B$] {};
-\node (C) at (5,0)[point,label=below :$C$] {};
-\node (A) at (3.158,3.938)[point,label=above :$A$] {};
-\draw (0,0) node [below right] {.} circle (5);
+\node (C) at (14,0)[point,label=below :$C$] {};
+\node (A) at (12.12,6.99)[point,label=above :$A$] {};
+\draw (0,0) node [below right] {.} circle (14);
 \draw (B)--(A);
 \draw (B)--(C);
-\tkzMarkAngle[arc=l,size=0.33,color=black](C,B,A)
-\tkzLabelAngle[pos=0.65](C,B,A){$\theta$}
+\tkzMarkAngle[fill=green!40,size=0.5cm,mark=](C,B,A)
+\tkzLabelAngle[pos=0.65](C,B,A){\rotatebox{-360}{$30$}}
+
+
 \end{tikzpicture}
 \end{document}
