--- a/questions/circle/QUESTION4.tex
+++ b/questions/circle/QUESTION4.tex
@@ -5,15 +5,16 @@ from a point on the concentric circle of radius
 6 units.\\
 \begin{itemize}
 \item\textbf{Solution} :\\
-
+\input{./figs/CIRCLE_CON.tex}\\  PB and QB are the tangents 
+\item P=(2.66,2.98)\\
+\item Q=(2.66,-2.98)\\
 \end{itemize}
-\input{./figs/TRICON.tex}\\  PB and QB are the tangents
 
 \seti
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.4]{./CODES/circle/circon.png}
+\includegraphics[scale=.4]{./CODES/circle/CIR_CON.png}
 \end{figure}
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}  \\
