--- a/questions/circle/QUESTION7.tex
+++ b/questions/circle/QUESTION7.tex
@@ -16,6 +16,10 @@
 \begin{figure}
 \includegraphics[scale=.4]{./CODES/quad/QUAD_P.png}
 \end{figure}
+\begin{itemize}
+\item\url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/CYCPA.tex}
+\item\url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/quad/QUADP.py}
+\end{itemize}
 \end{frame}
 \begin{frame}
 \textbf{To prove} : PQRS is a rectangle\\
