--- a/questions/circle/QUESTION4.tex
+++ b/questions/circle/QUESTION4.tex
@@ -17,7 +17,7 @@ from a point on the concentric circle of radius
 \includegraphics[scale=.4]{./CODES/circle/CIR_CON.png}
 \end{figure}
 \begin{itemize}
-\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}  \\
-\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/TRICON.tex}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/CIRCLE_CON.tex}  \\
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/circle/circon.py}
 \end{itemize}
 \end{frame}
