--- a/questions/triangle/question2.tex
+++ b/questions/triangle/question2.tex
@@ -36,6 +36,7 @@ Here $\theta$ = 30 $\degree$ and r = 14cm\\
 	=51.31cm^2.
 \end{align*}   
 \begin{itemize}
-\item \url {https://github.com/pratibha444/GEOMETRY/blob/master/CODES/MISC.py} 
+\item \url {https://github.com/pratibha444/GEOMETRY/blob/master/figs/clock.tex} 
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/newclock.py}
 \end{itemize}             
 \end{frame}
