--- a/questions/triangle/question8.tex
+++ b/questions/triangle/question8.tex
@@ -13,13 +13,18 @@
 \seti
 \end{itemize}
 \end{frame}
-\begin{figure}
+\begin{frame}
 \begin{center}
 \begin{figure}
 \includegraphics[scale=.4]{./CODES/triangle/tri_ex.png}
 \end{figure}
 \end{center}
-\end{figure}
+\begin{itemize}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/TRI_EX.tex}
+\item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/triangle/TRIANGLE_EXCERCISE.py}
+\end{itemize}
+\end{frame}
+
 
 
 \begin{frame}
