--- a/questions/circle/QUESTION7.tex
+++ b/questions/circle/QUESTION7.tex
@@ -13,6 +13,17 @@
 \end{itemize}
 \end{frame}
 \begin{frame}
+\begin{itemize}
+\item \textbf{Calculation}
+\end{itemize}
+\begin{align*}
+a = 2\\
+c = 4\\
+b = \sqrt{c^2} - a ^2\\
+b = 3.46
+\end{align*}
+\end{frame}
+\begin{frame}
 \begin{figure}
 \includegraphics[scale=.4]{./CODES/quad/QUAD_P.png}
 \end{figure}
@@ -23,10 +34,13 @@
 \end{frame}
 \begin{frame}
 \textbf{To prove} : PQRS is a rectangle\\
-\textbf{Proof}:
- $\angle$P = $\angle$R (opposite sides of parallelogram are equal)\\
-$\angle$P + $\angle$R = 180$\degree$ (sum of opposite angles of a cyclic quadrilateral is 180$\degree$)
-2$\angle$P = 180$\degree$\\
-$\angle$P = 90 $\degree$\\
+\textbf{Proof}: 
+\begin{itemize}
+\item $\angle$P = $\angle$R (opposite sides of parallelogram are equal)\\
+\item $\angle$P + $\angle$R = 180$\degree$ (sum of opposite angles of a cyclic quadrilateral is 180$\degree$)\\
+
+\item 2$\angle$P = 180$\degree$\\
+\item$\angle$P = 90 $\degree$\\
 Hence PQRS is a rectangle as in rectangle one angle is 90$\degree$\\
+\end{itemize}
 \end{frame}
