--- a/questions/quad/question3.tex
+++ b/questions/quad/question3.tex
@@ -22,8 +22,18 @@ separately. How should she do it?
 \item PQ = 5\\
 \item SP = 6\\
 \item AG = 6\\
-\item Area of $\triangle$PAQ = $15cm^2$\\
-\item Area of $\triangle$APS and $\triangle$ARQ = 7.5$cm^2$ and 7.5$cm^2$ respectively. 
+\item$\triangle$ APQ = $\triangle$PAS + $\triangle$ QAR\\ 
+\item$\triangle$ APQ = $\frac{1}{2}$ X l X b\\
+$\triangle$ APQ = $\frac{1}{2}$ X 6 X 5\\
+$\triangle$ APQ = 15$cm^2$
+\item$\triangle$ PAS = $\frac{1}{2}$ X l X b\\
+$\triangle$ PAS = $\frac{1}{2}$ X 6 X 3\\
+$\triangle$ PAS = 9$cm^2$\\
+\item$\triangle$ QRA = $\frac{1}{2}$ X l X b\\
+$\triangle$ QRA = $\frac{1}{2}$ X 6 X 2\\
+$\triangle$ QRA = 6$cm^2$\\
+\item 6 + 9 = 15
+\item Hence Area of $\triangle$APQ = Area of $\triangle$PAS + Area of $\triangle$QAR\\
 \end{itemize}
 \end{frame}
 \begin{frame}
@@ -44,7 +54,7 @@ As PQRS is a parallelogram so\\
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.5]{./CODES/quad/QUAD_EX.png}\\
+\includegraphics[scale=.5]{./CODES/quad/NEWQUAD.png}\\
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/FARM.tex}\\
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/quad/QUAD_EXCERCISE.py}
