--- a/questions/triangle/QUESTION5.tex
+++ b/questions/triangle/QUESTION5.tex
@@ -12,6 +12,21 @@
 \item $\angle B$ = 110\\ 
 \end{itemize}
 \end{frame}
+\begin{frame}
+\begin{itemize}
+\item\textbf{Given}: BC = 6.5 and AB = 6.5\\
+$\angle$ABC = 110
+\begin{align*}
+a = 6.5 and  c = 6.5\\
+b = \sqrt{a^2 + c^2 - 2ac cos(A)}\\
+b= 10.64\\
+p=\frac{a^2 + c^2 - b^2}{2a}\\
+p=-2.22\\
+q=\sqrt{c^2 - p^ 2}\\
+q = 6.10
+\end{align*}
+\end{itemize}
+\end{frame}
 
 \begin{frame}
 \begin{figure}
