--- a/questions/triangle/question8.tex
+++ b/questions/triangle/question8.tex
@@ -33,15 +33,26 @@
 \item \textbf{Given} : P and Q are extended to AB and AC respectively.\\
 And $\angle$PBC $<$ $\angle$QCB --(1)\\
 So,\\
-$\angle$PBC + $\angle$ABC = 180$\degree$  \\
-$\angle$QCB + $\angle$ACB = 180$\degree$  \\
 \end{itemize}
-$\angle$PBC = 180 - $\angle$ABC --(2)\\
-$\angle$QCB = 180 - $\angle$ACB --(3)\\
+\begin{align*}
+\angle\textit{PBC} + \angle\textit{ABC} = 180\degree  \\
+\angle\textit{QCB} + \angle\textit{ACB} = 180\degree  \\
+\end{align*}
+\begin{align*}
+\angle\textit{PBC} = 180 - \angle\textit{ABC} --(2)\\
+\angle\textit{QCB} = 180 - \angle\textit{ACB} --(3)\\
+\end{align*}
 By substituting the value of $\angle$PBC and $\angle$QCB in equation 1 \\
-180 - $\angle$ABC $<$ 180 - $\angle$ACB\\
--$\angle$ABC $<$ -$\angle$ACB\\
+\begin{align*}
+180 - \angle\textit{ABC} < 180 - \angle\textit{ACB}\\
+-\angle\textit{ABC} < -\angle\textit{ACB}\\
+\end{align*}
 multiplying both the sides by '-'\\
--(-$\angle$ABC) $>$  -(-$\angle$ACB)\\
-$\angle$ABC $>$ $\angle$ACB   (sides opposite to greater angle is longer)\\
+\end{frame}
+\begin{frame}
+\begin{align*}
+-(-\angle\textit{ABC}) >  -(-\angle\textit{ACB})\\
+\angle\textit{ABC} > \angle\textit{ACB}
+\end{align*}  
+ (sides opposite to greater angle is longer)\\
 \end{frame}
