--- a/questions/circle/QUESTION4.tex
+++ b/questions/circle/QUESTION4.tex
@@ -6,12 +6,30 @@ from a point on the concentric circle of radius
 \begin{itemize}
 \item\textbf{Solution} :\\
 \input{./figs/CIRCLE_CON.tex}\\  PB and QB are the tangents 
-\item P=(2.66,2.98)\\
-\item Q=(2.66,-2.98)\\
 \end{itemize}
-
 \seti
 \end{frame}
+
+\begin{frame}
+\begin{itemize}
+\item \textbf{Given} : r1=4 and r2 = 6\\
+\begin{align*}
+a=\sqrt{r2^2 - r1^2}\\
+a=4.47\\
+c=r1 and b=r2\\
+p=\frac{b^2+c^2-a^2}{2b}\\
+p=2.66\\
+q=\sqrt{c^2 - p^2}\\
+q=2.98\\
+AB = r2 \\
+P = (2.66,2.98)\\
+Q = (2.66,-2.98)
+\end{align*}
+\end{itemize}
+
+\end{frame}
+
+
 \begin{frame}
 \begin{figure}
 \includegraphics[scale=.4]{./CODES/circle/CIR_CON.png}
