--- a/questions/triangle/question8.tex
+++ b/questions/triangle/question8.tex
@@ -5,10 +5,12 @@
 \input{./figs/TRI_EX.tex}
 \end{center}
 \end{enumerate}
+\end{frame}
+\begin{frame}
 \begin{itemize}
-\item a= 4,b=4.58,c=4
+\item a= 6.5,b=6.5,c=10.64
 \item cos(C)=-$\frac{c^2 - b^2 -a^2}{2ab}$
-\item cos(C)=55
+\item cos(C)=1
 
 \seti
 \end{itemize}
@@ -16,7 +18,7 @@
 \begin{frame}
 \begin{center}
 \begin{figure}
-\includegraphics[scale=.4]{./CODES/triangle/tri_ex.png}
+\includegraphics[scale=.4]{./CODES/triangle/NEWTRI.png}
 \end{figure}
 \end{center}
 \begin{itemize}
