--- a/figs/CIRCLE_CON.tex
+++ b/figs/CIRCLE_CON.tex
@@ -17,7 +17,8 @@
 \draw (B)--(P);
 \draw (A)--(P);
 \draw (A)--(Q);
-
+\tkzMarkRightAngle[fill=white!45,size=.6,mark=](B,P,A)
+\tkzMarkRightAngle[fill=white!45,size=.6,mark=](B,Q,A)
 
 
 \end{tikzpicture}
