--- a/questions/quad/question3.tex
+++ b/questions/quad/question3.tex
@@ -19,6 +19,27 @@ separately. How should she do it?
 \end{frame}
 \begin{frame}
 \begin{itemize}
+\item S = (-0.52,5.97)\\
+\item A = (3.04,5.97)\\
+\item R = (4.47,5.57)
+\item  Distance between S and A
+\end{itemize}
+\begin{align*}
+z = \sqrt{(x_1 - x_2)^2 + (y_1 - y_2)^2}\\
+z = \sqrt{(3.04 + 0.52) + (5.97 - 5.97)}\\
+z = 3.55
+\end{align*}
+\begin{itemize}
+\item Distance between A and R
+\end{itemize}
+\begin{align*}
+z = \sqrt{(x_1 - x_2)^2 + (y_1 - y_2)^2}\\
+z = \sqrt{(4.47 - 3.04) + (5.97 - 5.97)}\\
+z = 1.43
+\end{align*}
+\end{frame}
+\begin{frame}
+\begin{itemize}
 \item PQ = 5\\
 \item SP = 6\\
 \item AG = 6\\
@@ -27,12 +48,12 @@ separately. How should she do it?
 $\triangle$ APQ = $\frac{1}{2}$ X 6 X 5\\
 $\triangle$ APQ = 15$cm^2$
 \item$\triangle$ PAS = $\frac{1}{2}$ X l X b\\
-$\triangle$ PAS = $\frac{1}{2}$ X 6 X 3\\
-$\triangle$ PAS = 9$cm^2$\\
+$\triangle$ PAS = $\frac{1}{2}$ X 6 X 3.55\\
+$\triangle$ PAS = 10.65$cm^2$\\
 \item$\triangle$ QRA = $\frac{1}{2}$ X l X b\\
-$\triangle$ QRA = $\frac{1}{2}$ X 6 X 2\\
-$\triangle$ QRA = 6$cm^2$\\
-\item 6 + 9 = 15
+$\triangle$ QRA = $\frac{1}{2}$ X 6 X 1.43\\
+$\triangle$ QRA = 4.38$cm^2$\\
+\item 10.65 + 4.38 = 15
 \item Hence Area of $\triangle$APQ = Area of $\triangle$PAS + Area of $\triangle$QAR\\
 \end{itemize}
 \end{frame}
@@ -49,12 +70,13 @@ As PQRS is a parallelogram so\\
 \triangle{PAQ} = \frac{1}{2}\textit{area}(\triangle{APS} + \triangle{ARQ} + \triangle{APQ}\\
 2\triangle{PAQ} - \triangle{PAQ} = \textit{area(}\triangle{APS} + \triangle{ARQ}\textit{)}\\
 \triangle{PAQ} = \triangle{APS} + \triangle{ARQ}\\
-\textit{Hence the farmer can sow wheat in} \triangle{PAQ} \textit{and pulses in} \triangle{APS} and \triangle{ARQ}\\
 \end{align*}
+Hence the farmer can sow wheat in $\triangle$PAQ and pulses in $\triangle$APS and $\triangle$ARQ\\
+
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.5]{./CODES/quad/NEWQUAD.png}\\
+\includegraphics[scale=.5]{./figs/farme.eps}\\
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/FARM.tex}\\
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/CODES/quad/QUAD_EXCERCISE.py}
