--- a/questions/quad/question9.tex
+++ b/questions/quad/question9.tex
@@ -16,7 +16,8 @@ and\\
 
 PS = 7.5 , So\\
 
-PQ + SQ $>$PS , But that equation is not true for any type of triangle .\\
+PQ + SQ $<$PS ,\\
+ But that equation is not true for another triangle.\\
 So, we can't construct the given quadrilateral.
 \seti
 \end{itemize}
