--- a/questions/triangle/question2.tex
+++ b/questions/triangle/question2.tex
@@ -20,11 +20,13 @@ swept by the minute hand in 5 minutes.\\
 
 \end{itemize}
 \end{frame}
+
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.6]{./CODES/MISC.png}
+\includegraphics[scale=.6]{./CODES/quad/MISC.png}
 \end{figure}
 \end{frame}
+
 \begin{frame}
 
  In 60 minutes minute hand covers  360$\degree$\\
