--- a/questions/triangle/question8.tex
+++ b/questions/triangle/question8.tex
@@ -9,8 +9,9 @@
 \begin{frame}
 \begin{itemize}
 \item a= 6.5,b=6.5,c=10.64
-\item cos(C)=-$\frac{c^2 - b^2 -a^2}{2ab}$
-\item cos(C)=0
+\item $c^2$ = $b^2$ + $a^2$ - 2abcos(B)
+\item cos(C)= -($\frac{c^2 - b^2 -a^2}{2ab}$)
+\item cos(C) = 35$\degree$
 
 \seti
 \end{itemize}
@@ -18,7 +19,7 @@
 \begin{frame}
 \begin{center}
 \begin{figure}
-\includegraphics[scale=.4]{./CODES/triangle/NEWTRI.png}
+\includegraphics[scale=.4]{./figs/NEWTRI.eps}
 \end{figure}
 \end{center}
 \begin{itemize}
