--- a/questions/circle/QUESTION4.tex
+++ b/questions/circle/QUESTION4.tex
@@ -32,7 +32,7 @@ Q = (2.66,-2.98)
 
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.4]{./CODES/circle/CIR_CON.png}
+\includegraphics[scale=.4]{./figs/CIR_CON.eps}
 \end{figure}
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/CIRCLE_CON.tex}  \\
