--- a/questions/circle/QUESTION7.tex
+++ b/questions/circle/QUESTION7.tex
@@ -27,7 +27,7 @@ PS = 4
 \end{frame}
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.4]{./CODES/quad/QUAD_P.png}
+\includegraphics[scale=.4]{./figs/QUAD_P.eps}
 \end{figure}
 \begin{itemize}
 \item\url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/CYCPA.tex}
