--- a/questions/triangle/QUESTION5.tex
+++ b/questions/triangle/QUESTION5.tex
@@ -30,7 +30,7 @@ q = 6.10
 
 \begin{frame}
 \begin{figure}
-\includegraphics[scale=.4]{./CODES/triangle/TRI_CON.png}
+\includegraphics[scale=.4]{./figs/TRI_CON.eps}
 \end{figure}
 \begin{itemize}
 \item \url{https://github.com/pratibha444/GEOMETRY/blob/master/figs/tri_iso.tex}
